[gd_scene load_steps=5 format=2]

[ext_resource path="res://images/marcaA.png" type="Texture" id=1]
[ext_resource path="res://luzAzul.gd" type="Script" id=2]
[ext_resource path="res://sons/m2mobi__click.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 1.0

[node name="luzAzul" type="Node2D"]
script = ExtResource( 2 )

[node name="MarcaA" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
z_index = 10
texture = ExtResource( 1 )

[node name="FotonAzul" type="CPUParticles2D" parent="."]
amount = 500
lifetime = 8.0
explosiveness = 1.0
lifetime_randomness = 0.11
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
scale_amount = 5.0
color = Color( 0, 0.227451, 1, 1 )

[node name="luzFx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -30.0
pitch_scale = 2.1
mix_target = 2

[node name="ColAzul" type="Area2D" parent="."]

[node name="ShapeAz" type="CollisionShape2D" parent="ColAzul"]
shape = SubResource( 1 )
